# VectorizationExperiments

./: CMakeLists.txt
cross/: CMakeLists.txt  cross.cxx
dot/: CMakeLists.txt  dot.cxx
tile/: CMakeLists.txt  tile.cxx
