CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(LOOPEXEC LoopTiling_SERIAL)
ADD_EXECUTABLE(${LOOPEXEC} tile.cxx)
TARGET_INCLUDE_DIRECTORIES(${LOOPEXEC} PRIVATE ${VTKm_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${LOOPEXEC} PRIVATE ${VTKm_LIBRARIES})
TARGET_COMPILE_OPTIONS(${LOOPEXEC} PRIVATE ${VTKm_COMPILE_OPTIONS})
